# nl2cad

./: .gitignore  AGENTS.md  AUDIT-REPORT.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  catalog-info.yaml  pyproject.toml  run_core_tests.sh  run_tests.sh  setup_ifc_venv.sh
.github/ISSUE_TEMPLATE/: agent-task.yml
.github/PULL_REQUEST_TEMPLATE/: agent-pr.md
.github/workflows/: ci.yml  deploy.yml  lint.yml  pages.yml  publish-nl2cad.yml  publish.yml  tenant-onboarding.yml  test.yml
.windsurf/rules/: nl2cad-python-rules.md
.windsurf/workflows/: adr-review.md  adr.md  agent-session-start.md  agent-task.md  agentic-coding.md  governance-check.md  hotfix.md  new-module.md  new-package.md  release.md  repo-health-check.md  start.md  sync-repos.md  task-01-core-handlers.md  task-02-gaeb-tests.md  task-03-nlp-nl2dxf.md  task-04-cadhub-integration.md  use-case.md  workflow-index.md
docs/: AGENT_HANDOVER.md  configurator.html  index.html
docs/adr/: ADR-001-REVIEW-2.md  ADR-001-REVIEW.md  ADR-001-brandschutz-explosionsschutz-package.md  ADR-009-modul-registry-multi-product.md
docs/data/: modules.json  profiles.json
scripts/: publish.sh
src/nl2cadfw/: __init__.py
tests/integration/: test_full_pipeline.py
