[project]
name = "iil-nl2cadfw"
version = "0.1.0"
description = "NL2CAD Framework — IFC/DXF parsing, DIN 277 area calculation, Brandschutz, GAEB and NLP-to-CAD intent classification"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Achim Dehnert", email = "achim@dehnert.com"}
]
keywords = [
    "nl2cad", "ifc", "dxf", "bim", "cad", "din277", "brandschutz",
    "gaeb", "nlp", "building", "architecture", "ai",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = []

[project.optional-dependencies]
ifc = [
    "ifcopenshell>=0.8.0",
]
nlp = [
    "openai>=1.0",
]
all = [
    "ifcopenshell>=0.8.0",
    "openai>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.uv.workspace]
members = ["packages/*"]

[project.urls]
Homepage = "https://github.com/achimdehnert/nl2cad"
Repository = "https://github.com/achimdehnert/nl2cad"
Issues = "https://github.com/achimdehnert/nl2cad/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nl2cadfw"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
pythonpath = ["src"]
